--- a/public/index.html
+++ b/public/index.html
@@ -4,14 +4,20 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="/styles.css" />
+    <link rel="stylesheet" type="text/css" href="./styles.css" />
     <title>Abibas</title>
+    <script async>
+      var xhr = new XMLHttpRequest();
+      xhr.open("POST", "http://localhost:3005/randomID", true);
+      xhr.setRequestHeader("Content-Type", "application/json");
+      xhr.send(JSON.stringify({}));
+    </script>
   </head>
   <body>
     <div id="navbar"></div>
     <div id="details"></div>
     <div id="suggestions"></div>
-    <div id="reviews"></div>
+    <div id="Reviews"></div>
     <script
       crossorigin
       src="https://unpkg.com/react@16/umd/react.production.min.js"
