--- a/public/index.html
+++ b/public/index.html
@@ -26,9 +26,9 @@
       crossorigin
       src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js"
     ></script>
-    <script src="http://localhost:3001/bundle.js"></script>
-    <script src="http://localhost:3002/bundle.js"></script>
-    <script src="http://localhost:3003/bundle.js"></script>
-    <script src="http://localhost:3004/bundle.js"></script>
+    <script src="https://s3-us-west-1.amazonaws.com/abibasnavbar/bundle.js"></script>
+    <script src="https://s3-us-west-1.amazonaws.com/abibas/product-details/bundle.js"></script>
+    <script src="https://s3-us-west-1.amazonaws.com/abibas-shoes/taylor-bucket/bundle.js"></script>
+    <script src="https://s3-us-west-1.amazonaws.com/abibas-shoes/andrew-bundle/bundle.js"></script>
   </body>
 </html>
